hphp/test/zend/bad/sub_001.php
<?php

$a = array(1,2,3);
$b = array(1);

$c = $a - $b;
var_dump($c);

echo "Done\n";
?>